--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -8,4 +8,17 @@
                                             android:layout_height="match_parent"
                                             android:id="@+id/recycler_view"/>
 
+    <ProgressBar android:id="@+id/progress_bar"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                style="@style/Base.Widget.AppCompat.ProgressBar"
+                 android:layout_gravity="center"
+                 android:visibility="gone"/>
+
+    <include layout="@layout/empty_list_layout"
+             android:id="@+id/empty_view"
+             android:visibility="gone"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content" android:layout_gravity="center"/>
+
 </FrameLayout>
