--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -6,7 +6,7 @@
 
     <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                             android:layout_height="match_parent"
-                                            android:id="@+id/recycler_view"/>
+                                            android:id="@+id/recycler_view" android:visibility="invisible"/>
 
     <ProgressBar android:id="@+id/progress_bar"
                  android:layout_width="wrap_content"
