--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,12 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="match_parent"
+>
 
     <android.support.design.widget.CoordinatorLayout android:layout_width="0dp"
                                                      android:layout_height="0dp"
+                                                     android:id="@+id/coordinator_layout"
                                                      app:layout_constraintBottom_toTopOf="@+id/bottom_nav_view"
                                                      app:layout_constraintTop_toTopOf="parent"
                                                      app:layout_constraintStart_toStartOf="parent"
