--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -3,17 +3,17 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="my.dzeko.footapp.view.fragment.NewsListFragment">
+    <android.support.v4.widget.SwipeRefreshLayout android:layout_width="match_parent"
+                                                  android:layout_height="match_parent"
+                                                  android:id="@+id/swipe_refresh">
 
-    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-                                            android:id="@+id/recycler_view" android:visibility="invisible"/>
+        <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
+                                                android:layout_height="match_parent"
+                                                android:id="@+id/recycler_view" android:visibility="invisible"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-    <ProgressBar android:id="@+id/progress_bar"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 style="@style/Base.Widget.AppCompat.ProgressBar"
-                 android:layout_gravity="center"
-                 android:visibility="visible"/>
+
+    
 
     <include layout="@layout/empty_list_layout"
              android:id="@+id/empty_view"
