--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,15 +37,16 @@
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.BottomNavigationView android:id="@+id/bottom_nav_view"
-                                                        android:layout_width="wrap_content"
-                                                        android:layout_height="0dp"
+                                                        android:layout_width="0dp"
+                                                        android:layout_height="wrap_content"
                                                         android:background="?colorPrimary"
                                                         app:itemIconTint="@color/bottom_nav_view_item_color"
                                                         app:itemTextColor="@color/bottom_nav_view_item_color"
                                                         app:menu="@menu/bottom_nav_view_menu"
                                                         app:layout_constraintBottom_toBottomOf="parent"
                                                         app:layout_constraintEnd_toEndOf="parent"
-                                                        app:layout_constraintStart_toStartOf="parent"/>
+                                                        app:layout_constraintStart_toStartOf="parent"
+                                                        app:layout_constraintTop_toBottomOf="@+id/coordinator_layout"/>
 
 
 </android.support.constraint.ConstraintLayout>
